// Copyright 2022 tsuru authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package v1alpha1;

option go_package = "github.com/tsuru/deploy-agent/v2/api/v1alpha1";

service Build {
    // Builds (and pushes) container images.
    rpc Build(BuildRequest) returns (stream BuildResponse) {};
}

message BuildRequest {
  // DeployOrigin indicates how the application is being deployed.
  DeployOrigin deploy_origin = 1;

  // SourceImage is the source container image name.
  //
  // When deploy is from app's source code (DEPLOY_ORIGIN_SOURCE_FILES), it holds
  // the plataform's container image (e.g. docker.io/tsuru/scratch:latest).
  // When deploy is from container image (DEPLOY_ORIGIN_CONTAINER_IMAGE), it holds
  // the app's container image (e.g. registry.example.com/company/app:v100).
  // Otherwise it's empty.
  string source_image = 2;

  // DestinationImages are the tags of the container image after build.
  repeated string destination_images = 3;

  // Data is the app's source data (or container context).
  // Cannot exceed 2^32 of size.
  //
  // See more: https://developers.google.com/protocol-buffers/docs/proto3#scalar
  bytes data = 4;
}

enum DeployOrigin {
  option allow_alias = true;
  DEPLOY_ORIGIN_UNSPECIFIED = 0;
  DEPLOY_ORIGIN_SOURCE_FILES = 1;    // tsuru app deploy ... /path/to/my/files.sh
  DEPLOY_ORIGIN_CONTAINER_IMAGE = 2; // tsuru app deploy ... -i registry.example.com/tsuru/my-app:staging
  DEPLOY_ORIGIN_DOCKERFILE = 3;      // tsuru app deploy --dockerfile Dockerfile --dockerfile-context ./
  DEPLOY_ORIGIN_CONTAINERFILE = 3;   // alias for containerfile :P
}

message BuildResponse {
  oneof data {
    // Output is the progress messages during the build and push phase.
    string output = 1;
    // TsuruConfig is the configuration of the application.
    TsuruConfig tsuru_config = 2;
  }
}

message TsuruConfig {
  // Procfile definition found during the build.
  string procfile = 1;
  // TsuruYAML definition found during the build.
  string tsuru_yaml = 2;
}
